syntax = "proto3";
package Pylonstech.pylons.pylons;

option go_package = "github.com/Pylons-tech/pylons/x/pylons/types";

message GoogleIAPOrder {
  string creator = 1;
  string productID = 2;
  string purchaseToken = 3;
  string receiptDataBase64 = 4;
  string signature = 5;
}